add scroll reveal

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <title>PetPup's | Cuidando do seu pet como se fosse da nossa família</title>
 </head>
 <body>
-  <header class="navbar">
+  <header class="navbar scrollReveal500">
     <div class="container">
       <nav>
         <a href="#">
@@ -74,7 +74,7 @@
   <main>
     <section id="s-home">
       <div class="container">
-        <div class="container-text-home">
+        <div class="container-text-home scrollReveal200">
           <div class="content-text-home">
             <h1>Seu Pet em boas mãos</h1>
             <p>Antes de levar seu pet para casa, garanta que ele esteja saudável e bem cuidado.</p>
@@ -88,7 +88,7 @@
           </div>
 
           <div>
-            <div class="container-video">
+            <div class="container-video scrollReveal400">
               <img class="cat-video" src="assets/img/cat-home-video.png" alt="cat">
               <img id="play-button" src="assets/img/button-video.png" alt="button-play">
 
@@ -116,7 +116,7 @@
     </section>
 
     <section id="s-why-choose-us">
-      <div class="container">
+      <div class="container scrollReveal200">
         <div class="container-title-choose">
           <h1>Por que nos escolher?</h1>
           <h2>Algumas razões pelo qual faz total sentido você nos escolher para cuidar do seu pet</h2>
@@ -156,15 +156,15 @@
     <section id="s-banner">
       <div class="container">
         <div>
-          <h1>“Pets não são apenas animais, eles são parte da sua família”</h1>
-          <p>torne isso mais real com produtos e serviços de qualidade</p>
+          <h1 class="scrollReveal200">“Pets não são apenas animais, eles são parte da sua família”</h1>
+          <p class="scrollReveal400">torne isso mais real com produtos e serviços de qualidade</p>
         </div>
       </div>
     </section>
 
     <section id="s-pets-category">
       <div class="container">
-        <h1>Categorias por Pets</h1>
+        <h1 class="scrollReveal200">Categorias por Pets</h1>
 
         <div class="products-wrapper">
           <div class="products">
@@ -205,35 +205,35 @@
         <h1>Produtos & Serviços</h1>
     
         <div class="container-card-products">
-          <div>
+          <div class="IntervalDelay">
             <img src="assets/img/container-accessories.png" alt="">
             <div>
               <h2>Acessórios</h2>
             </div>
           </div>
 
-          <div>
+          <div class="IntervalDelay">
             <img src="assets/img/container-toys.png" alt="">
             <div>
               <h2>Brinquedos</h2>
             </div>
           </div>
 
-          <div>
+          <div class="IntervalDelay">
             <img src="assets/img/container-food.png" alt="">
             <div>
               <h2>Comida</h2>
             </div>
           </div>
 
-          <div>
+          <div class="IntervalDelay">
             <img src="assets/img/container-nutrition.png" alt="">
             <div>
               <h2>Nutrição</h2>
             </div>
           </div>
 
-          <div class="dog-shaver">
+          <div class="dog-shaver IntervalDelay">
             <img class="dog-shaver-img" src="assets/img/container-shaver.png" alt="">
             <img class="dog-shaver-mobile" src="assets/img/container-shaver-mobile.png" alt="">
             <div style="width: 94%; left: 3%;">
@@ -259,7 +259,7 @@
         <hr class="line-contact">
     
         <div class="container-dogs-contact">
-          <div class="content-dog1">
+          <div class="content-dog1 IntervalDelay">
             <img src="assets/img/chihuahua.png" alt="chihuahua" style="margin-bottom: 1rem;">
             <h3>Chihuahua</h3>
             <div>
@@ -270,13 +270,13 @@
             </div>
           </div>
 
-          <div class="content-dog2">
+          <div class="content-dog2 IntervalDelay">
             <img src="assets/img/beagle.png" alt="beagle" style="margin-bottom: 1rem;">
             <h3>Alimente com amor</h3>
             <p>Alimente seu pet com amor e distraia-os usando os brinquedos.</p>
           </div>
 
-          <div class="content-dog3">
+          <div class="content-dog3 IntervalDelay">
             <div>
               <b>90+</b>
               <p>Pets novos</p>
@@ -293,7 +293,7 @@
           </div>
         </div>
 
-        <div class="content-contact">
+        <div class="content-contact scrollReveal500">
           <div class="content-infos-contact">
             <div class="container-icon-contact">
               <img src="assets/img/icon/home.svg" alt="home icon" style="width: 31px;">
@@ -329,7 +329,7 @@
   </main>
 
   <footer>
-    <div class="container">
+    <div class="container scrollReveal200">
       <div class="content-footer-links">
         <div>
           <img class="brand-footer" src="assets/img/brand-footer.svg" alt="brand">
