remove video reveal bug

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           </div>
 
           <div>
-            <div class="container-video scrollReveal400">
+            <div class="container-video">
               <img class="cat-video" src="assets/img/cat-home-video.png" alt="cat">
               <img id="play-button" src="assets/img/button-video.png" alt="button-play">
 
