remove video reveal bug

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
   <main>
     <section id="s-home">
       <div class="container">
-        <div class="container-text-home scrollReveal200">
+        <div class="container-text-home">
           <div class="content-text-home">
-            <h1>Seu Pet em boas mãos</h1>
-            <p>Antes de levar seu pet para casa, garanta que ele esteja saudável e bem cuidado.</p>
-            <div class="container-button-home">
+            <h1 class="scrollReveal200">Seu Pet em boas mãos</h1>
+            <p class="scrollReveal200">Antes de levar seu pet para casa, garanta que ele esteja saudável e bem cuidado.</p>
+            <div class="container-button-home scrollReveal400">
               <button>
                 Nossos Serviços
                 <img src="assets/img/icon/arrow-right-home.svg" alt="arrow right">
