--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600&family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
   <!-- favicon -->
-  <link rel="shortcut icon" href="assets/img/icon/favicon.svg" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/img/271274468_353591376766386_3559152047006800730_n-removebg-preview.png" type="image/x-icon">
 
   <!-- style -->
   <link rel="stylesheet" href="assets/css/style.css">
@@ -24,14 +24,14 @@
   <!-- scroll reveal -->
   <script src="https://unpkg.com/scrollreveal"></script>
 
-  <title>PetPup's | Cuidando do seu pet como se fosse da nossa família</title>
+  <title>Pet Casa Curitiba | A casa do seu pet</title>
 </head>
 <body>
   <header class="navbar scrollReveal500">
     <div class="container">
       <nav>
         <a href="#">
-          <img class="brand" src="assets/img/brand.svg" alt="brand">
+          <img class="brand" src="assets/img/271274468_353591376766386_3559152047006800730_n-removebg-preview.png" alt="brand">
         </a>
 
         <div class="nav-mobile">
@@ -300,7 +300,7 @@
             </div>
             <div>
               <h4>Endereço</h4>
-              <p>Rua Santa Luzia 651 Loja B <br> 20030-96 - Centro, RJ</p>
+              <p>Rua Prefeito Ângelo Lopes, 36 - Cristo Rei<br> 80050-330 - Curitiba, PR</p>
             </div>
           </div>
 
@@ -310,7 +310,7 @@
             </div>
             <div>
               <h4>Telefone</h4>
-              <p>Whatsapp: (21) 93922-9627 <br> Empresarial: (21) 3348-3984</p>
+              <p>Whatsapp: (41) 99682-5087 <br> Empresarial: (41) 99682-5087</p>
             </div>
           </div>
 
@@ -375,7 +375,7 @@
       
       <div class="content-footer-infos">
         <div>
-          <p>Copyright © 2023 PetPup’s. Todos os direitos reservados.</p>
+          <p>Copyright © 2024 Pet Casa Curitiba. Todos os direitos reservados.</p>
         </div>
 
         <div>
