Alteração de nomes

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <!-- meta tags -->
   <meta charset="UTF-8">
-  <meta name="description" content="PetPup's | Cuidando do seu pet como se fosse da nossa família">
+  <meta name="description" content="Pet Casa Curitiba| Cuidando do seu pet como se fosse da nossa família">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#FF8139">
-  <meta name="copyright" content="PetPup's 2023">
+  <meta name="copyright" content="Pet Casa Curitiba 2023">
   <meta http-equiv="content-language" content="pt-br">
-  <meta property="og:title" content="PetPup's">
+  <meta property="og:title" content="Pet Casa Curitiba">
   <meta property="og:description" content="Cuidando do seu pet como se fosse da nossa família">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -248,7 +248,7 @@
       <div class="container">
         <div class="container-title-choose">
           <h1>
-            PetPup's
+            Pet Casa Curitiba
             <img src="assets/img/icon/dog-icon.svg" alt="" style="margin-left: 17px;" width="45px">
           </h1>
           <h2>Diga-nos o que podemos fazer pelo seu Pet</h2>
